add_executable(StrAlignmentClassifierTest StrAlignmentClassifierTest.cpp)
target_link_libraries(StrAlignmentClassifierTest classification gtest_main)
add_test(NAME StrAlignmentClassifierTest COMMAND StrAlignmentClassifierTest)

add_executable(AlignmentSummaryTest AlignmentSummaryTest.cpp)
target_link_libraries(AlignmentSummaryTest classification gtest_main)
add_test(NAME AlignmentSummaryTest COMMAND AlignmentSummaryTest)

add_executable(SmallVariantAlignmenClassifierTest SmallVariantAlignmenClassifierTest.cpp)
target_link_libraries(SmallVariantAlignmenClassifierTest classification gtest_main)
add_test(NAME SmallVariantAlignmenClassifierTest COMMAND SmallVariantAlignmenClassifierTest)
