add_executable(mapping_classifier_test mapping_classifier_test.cc)
add_executable(overlap_quantification_test overlap_quantification_test.cc)
add_executable(alignment_summary_test alignment_summary_test.cc)
add_executable(alignment_rescoring_test alignment_rescoring_test.cc)

target_link_libraries(mapping_classifier_test classification gtest_main)
target_link_libraries(overlap_quantification_test classification gtest_main)
target_link_libraries(alignment_summary_test classification gtest_main)
target_link_libraries(alignment_rescoring_test classification gtest_main)

add_test(NAME mapping_classifier_test COMMAND mapping_classifier_test)
add_test(NAME overlap_quantification_test COMMAND overlap_quantification_test)
add_test(NAME alignment_summary_test COMMAND alignment_summary_test)
add_test(NAME alignment_rescoring_test COMMAND alignment_rescoring_test)
