add_executable(sequence_operations_test sequence_operations_test.cc)
target_link_libraries(sequence_operations_test common gtest_main)
add_test(NAME sequence_operations_test COMMAND sequence_operations_test)

add_executable(count_table_test count_table_test.cc)
target_link_libraries(count_table_test common gtest_main)
add_test(NAME count_table_test COMMAND count_table_test)

add_executable(genomic_region_test genomic_region_test.cc)
target_link_libraries(genomic_region_test common gtest_main)
add_test(NAME genomic_region_test COMMAND genomic_region_test)
