
add_executable(RepeatGenotypeTest RepeatGenotypeTest.cpp)
target_link_libraries(RepeatGenotypeTest genotyping gtest_main)
add_test(NAME RepeatGenotypeTest COMMAND RepeatGenotypeTest)

add_executable(SmallVariantGenotyperTest SmallVariantGenotyperTest.cpp)
target_link_libraries(SmallVariantGenotyperTest genotyping gtest_main)
add_test(NAME SmallVariantGenotyperTest COMMAND SmallVariantGenotyperTest)

add_executable(AlleleCheckerTest AlleleCheckerTest.cpp)
target_link_libraries(AlleleCheckerTest genotyping gtest_main)
add_test(NAME AlleleCheckerTest COMMAND AlleleCheckerTest)

add_executable(StrAlignTest StrAlignTest.cpp)
target_link_libraries(StrAlignTest genotyping gtest_main)
add_test(NAME StrAlignTest COMMAND StrAlignTest)

add_executable(StrAlignMatrixTest AlignMatrixTest.cpp)
target_link_libraries(StrAlignMatrixTest genotyping gtest gmock_main)
add_test(NAME StrAlignMatrixTest COMMAND StrAlignMatrixTest)

add_executable(FragLogliksTest FragLogliksTest.cpp)
target_link_libraries(FragLogliksTest genotyping gtest gmock_main)
add_test(NAME FragLogliksTest COMMAND FragLogliksTest)

add_executable(StrGenotyperTest StrGenotyperTest.cpp)
target_link_libraries(StrGenotyperTest genotyping gtest gmock_main)
add_test(NAME StrGenotyperTest COMMAND StrGenotyperTest)
