add_executable(graph_test graph_test.cc)
add_executable(graph_builders_test graph_builders_test.cc)
add_executable(path_test path_test.cc)
add_executable(path_operations_test path_operations_test.cc)
add_executable(kmer_index_test kmer_index_test.cc)

target_link_libraries(graph_test graphs gtest_main)
target_link_libraries(graph_builders_test graphs gtest_main)
target_link_libraries(path_test graphs gtest_main)
target_link_libraries(path_operations_test graphs gtest_main)
target_link_libraries(kmer_index_test graphs gtest_main)

add_test(NAME graph_test COMMAND graph_test)
add_test(NAME graph_builders_test COMMAND graph_builders_test)
add_test(NAME path_test COMMAND path_test)
add_test(NAME path_operations_test COMMAND path_operations_test)
add_test(NAME kmer_index_test COMMAND kmer_index_test)
