add_executable(LocusSpecificationTest LocusSpecificationTest.cpp)
target_link_libraries(LocusSpecificationTest input gtest gmock_main)
add_test(NAME LocusSpecificationTest COMMAND LocusSpecificationTest)

add_executable(RegionGraphTest RegionGraphTest.cpp)
target_link_libraries(RegionGraphTest input gtest gmock_main)
add_test(NAME RegionGraphTest COMMAND RegionGraphTest)

add_executable(GraphBlueprintTest GraphBlueprintTest.cpp)
target_link_libraries(GraphBlueprintTest input gtest gmock_main)
add_test(NAME GraphBlueprintTest COMMAND GraphBlueprintTest)

